Fixed titles so that only 20 characters show on profile and home pages. Removed extra padding from home page

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -301,7 +301,7 @@ header {
 }
 
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1200px) {
     #full-title, #full-title * {
         color: rgba(255, 255, 255, 0);
     }
